# Spring25

./: .gitignore  Notes.txt
CS4632_ModSim/Programs/ColSim/: CMakeLists.txt
CS4632_ModSim/Programs/ColSim/.archive/: CMakeLists.txt  ConfigFile.cc  ConfigFile.hpp  Logger.cc  Logger.hpp
CS4632_ModSim/Programs/ColSim/.archive/include/: Gnuplot.hpp  Ntuple.hpp  Utils.hpp
CS4632_ModSim/Programs/ColSim/.archive/include/Core/: aNamed.hpp
CS4632_ModSim/Programs/ColSim/.archive/src/: Gnuplot.cpp  Ntuple.cc  Utils.cc  main.cc
CS4632_ModSim/Programs/ColSim/.cache/clangd/index/: ColSim.cpp.55A931F6AF4DA0AF.idx  ColSim.hpp.49DE42AB3769694D.idx  ColSimBase.cpp.8DD474CF5287B95B.idx  ColSimBase.hpp.B74DF3BEFF903211.idx  Constants.hpp.887EA9F415E4D2C4.idx  Core.h.747F3C203001BD79.idx  Event.hpp.16894F18E26F415E.idx  FourVector.hpp.2BDC94997A021F80.idx  Gnuplot.cpp.548683CF74448E8F.idx  Gnuplot.cxx.449673C2AFC3C9E3.idx  Gnuplot.hxx.59DAE0600D9C8646.idx  HardProcess.cpp.3C97D3CA3B9FDB42.idx  HardProcess.hpp.21A219E2C3C6F299.idx  LHEF.hpp.1B02588BEFD5BAC9.idx  LHEFFile.cpp.F660CBD7F3F135FA.idx  Logger.cpp.0D64B3A5C6106A35.idx  Logger.hpp.677018437E577D32.idx  Math.h.ED1B9A0479D26549.idx  MonteCarlo.cpp.18AF8A469AA4B5CA.idx  MonteCarlo.hpp.8BE61517411D3B16.idx  Particle.cpp.806E5B1ECF65CFA6.idx  Particle.hpp.A63D017C111E8C01.idx  PhaseSpace.hpp.606B9467CE1FD817.idx  Physics.h.9EEE81291433916A.idx  Process.cpp.765C39541957B027.idx  Process.hpp.37CE62B077FC2333.idx  Processes.cpp.9FEAA047CD54994E.idx  Processes.hpp.35D6E83B811EF3B8.idx  Settings.cpp.803A4999B689ECF7.idx  Settings.hpp.9D96661E7DB853DF.idx  Types.hpp.AAB862CC0787C443.idx  Utils.cpp.583BFD3EA260E4BD.idx  Utils.hpp.F8F482995937781D.idx  main.cpp.B5A01FC76C33DA54.idx
CS4632_ModSim/Programs/ColSim/Source/: CMakeLists.txt
CS4632_ModSim/Programs/ColSim/Source/ColSim/: CMakeLists.txt
CS4632_ModSim/Programs/ColSim/Source/ColSim/src/: ColSim.cpp
CS4632_ModSim/Programs/ColSim/Source/Core/: CMakeLists.txt
CS4632_ModSim/Programs/ColSim/Source/Core/.archive/: Array.hxx  Memory.cxx  Memory.hxx  String.cxx  String.hxx
CS4632_ModSim/Programs/ColSim/Source/Core/src/: Logger.cpp  Settings.cpp  Utils.cpp
CS4632_ModSim/Programs/ColSim/Source/Math/: CMakeLists.txt
CS4632_ModSim/Programs/ColSim/Source/Math/src/: MonteCarlo.cpp
CS4632_ModSim/Programs/ColSim/Source/Physics/: CMakeLists.txt
CS4632_ModSim/Programs/ColSim/Source/Physics/src/: .#HardProcess.cpp  HardProcess.cpp  LHEFFile.cpp  Particle.cpp  PhaseSpace.cpp  Process.cpp
CS4632_ModSim/Programs/ColSim/Source/Plotting/: CMakeLists.txt
CS4632_ModSim/Programs/ColSim/Source/Plotting/src/: Gnuplot.cpp
CS4632_ModSim/Programs/ColSim/Tests/: CMakeLists.txt
CS4632_ModSim/Programs/ColSim/Tests/Test1/: CMakeLists.txt  main.cpp
CS4632_ModSim/Programs/ColSim/docs/html/: _building.html  _config_file_8hpp_source.html  _subpage.html  _using.html  _utils_8hpp.html  _utils_8hpp.js  _utils_8hpp_source.html  annotated.html  annotated_dup.js  class_utils_1_1_config_file-members.html  class_utils_1_1_config_file.html  class_utils_1_1_config_file.js  class_utils_1_1_gnuplot-members.html  class_utils_1_1_gnuplot.html  class_utils_1_1_gnuplot.js  class_utils_1_1_logger-members.html  class_utils_1_1_logger.html  class_utils_1_1_logger.js  classes.html  dir_0cc0f854d85af330638b97943ef1598a.html  dir_0f9f05b692c277c91e33d8a3cdf8f226.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_63772b626f2709090f0bdca0f40827b4.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_7b47cca4d318623bb4270ab1fb592ef5.html  dir_7cf95c75336549b0f313de4b4deec458.html  dir_8addca62353adbf0d9d0d6bb35e119bd.html  dir_9c33770e936321ba34955e10f41fa668.html  dir_cbc967aff0917e65b58bfde183137cc3.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  doxygen_crawl.html  files.html  functions.html  functions_enum.html  functions_func.html  globals.html  globals_defs.html  index.html  index.js  (+11 more)
CS4632_ModSim/Programs/ColSim/docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_b.js  all_c.js  all_d.js  classes_0.js  classes_1.js  classes_2.js  defines_0.js  enums_0.js  functions_1.js  functions_2.js  functions_3.js  (+6 more)
CS4632_ModSim/Programs/ColSim/docs/latex/: _building.tex  _config_file_8hpp_source.tex  _subpage.tex  _using.tex  _utils_8hpp.tex  _utils_8hpp_source.tex  annotated.tex  class_utils_1_1_config_file.tex  class_utils_1_1_gnuplot.tex  class_utils_1_1_logger.tex  files.tex  index.tex  intro.tex  namespace_utils.tex  namespaces.tex  refman.tex
CS4632_ModSim/Programs/ColSim/res/manual/: building.dox  index.dox  using.dox
CS4632_ModSim/Programs/Test1/: CMakeLists.txt
CS4632_ModSim/Programs/Test1/src/: main.cpp
CS4632_ModSim/Programs/Test2/cpp/: CMakeLists.txt  bootstrap.sh
CS4632_ModSim/Programs/Test2/cpp/src/: main.cpp
CS4632_ModSim/Programs/Utils/: CMakeLists.txt  Doxyfile
CS4632_ModSim/Programs/Utils/include/: ConfigFile.hpp  Utils.hpp
CS4632_ModSim/Programs/Utils/include/.archive/: Utils.hpp
CS4632_ModSim/Programs/Utils/src/: ConfigFile.cc  Logger.cc  Utils.cc  main.cc
(+223 files in other folders)
